@@ -362,6 +362,10 @@ Extension Modules
 Library
 -------
 
+- bpo-30589: Fix multiprocessing.Process.exitcode to return the opposite
+  of the signal number when the process is killed by a signal (instead
+  of 255) when using the "forkserver" method.
+
 - bpo-28994: The traceback no longer displayed for SystemExit raised in
   a callback registered by atexit.
 
